--- a/src/app/modules/admin/reports/components/receipt-dialog/receipt-dialog.component.html
+++ b/src/app/modules/admin/reports/components/receipt-dialog/receipt-dialog.component.html
@@ -1,6 +1,7 @@
 <h2 mat-dialog-title class="mb-0">Receipt</h2>
 <mat-dialog-content class="mat-typography py-3 overflow-y-scroll">
-    <img [src]="imageUrl" alt="Receipt" />
+    <img *ngIf="data.imageUrl != null" [src]="imageUrl" alt="Receipt" />
+    <span *ngIf="data.imageUrl == null">There is no Receipt</span>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end" class="flex gap-4 items-center">
