--- a/src/app/modules/admin/expense/components/payment-dialog/payment-dialog.component.html
+++ b/src/app/modules/admin/expense/components/payment-dialog/payment-dialog.component.html
@@ -46,9 +46,9 @@
             </ng-container>
 
             <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef>Created Date</th>
+                <th mat-header-cell *matHeaderCellDef>Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.createdAt | date : "dd-MM-yyyy" }}
+                    {{ element.actualDate | date : "dd-MM-yyyy" }}
                 </td>
             </ng-container>
 
