--- a/src/app/modules/admin/reports/components/expense-payment-dialog/expense-payment-dialog.component.html
+++ b/src/app/modules/admin/reports/components/expense-payment-dialog/expense-payment-dialog.component.html
@@ -48,7 +48,7 @@
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef>Created Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.createdAt | date : "dd-MM-yyyy" }}
+                    {{ element.actualDate | date : "dd-MM-yyyy" }}
                 </td>
             </ng-container>
 
