--- a/src/app/modules/admin/roles-and-permissions/components/manage-roles/manage-roles.component.html
+++ b/src/app/modules/admin/roles-and-permissions/components/manage-roles/manage-roles.component.html
@@ -4,7 +4,7 @@
             <!-- Breadcrumb -->
             <div class="sm:flex hidden gap-2 items-center">
                 <mat-icon class="text-black hover:text-myAccent transition-all w-[22px] h-[22px] cursor-pointer"
-                    svgIcon="heroicons_outline:home" (click)="navigateToHome()">
+                    svgIcon="heroicons_outline:home" (click)="dashboardAccess ? navigateToHome() : ''">
                 </mat-icon>
                 <p>Roles and Permissions</p>
                 <span>/</span>
@@ -127,7 +127,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
 
-        <button (click)="addRole()"
+        <button (click)="addRole()" *ngIf="checkAdd"
             class="px-10 border text-textColor hover:border-accentHover border-darkAccent  py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2">
             <p class="font-semibold">Add Role</p>
             <!-- <mat-icon
@@ -166,7 +166,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <ng-container matColumnDef="updatedAt">
                 <th mat-header-cell *matHeaderCellDef>Updated Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.createdAt | date : "dd-MM-yyyy" }}
+                    {{ element.updatedAt | date : "dd-MM-yyyy" }}
                 </td>
             </ng-container>
 
@@ -176,10 +176,10 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 </th>
                 <td mat-cell *matCellDef="let element">
                     <div class="flex gap-2 justify-center sm:justify-end">
-                        <button matTooltip="Edit Role" (click)="editRole(element.id)">
+                        <button matTooltip="Edit Role" *ngIf="checkEdit" (click)="editRole(element.id)">
                             <img src="assets/icons/edit.svg" alt="Edit" class="w-[24px] h-[24px] cursor-pointer ml-5" />
                         </button>
-                        <button (click)="openDeleteDialog(element.id)" matTooltip="Delete Role">
+                        <button *ngIf="checkDelete" (click)="openDeleteDialog(element.id)" matTooltip="Delete Role">
                             <img src="assets\images\trash-can.png" alt="Delete"
                                 class="w-[24px] h-[24px] cursor-pointer" />
                         </button>
@@ -194,3 +194,5 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
         <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"></mat-paginator>
     </div>
 </section>
+
+<p-toast></p-toast>
