--- a/src/app/modules/admin/tax/components/add-tax/add-tax.component.html
+++ b/src/app/modules/admin/tax/components/add-tax/add-tax.component.html
@@ -1,12 +1,18 @@
 <section class="m-5 sm:m-10 p-4 sm:p-6 bg-white rounded-lg w-full flex flex-col gap-4">
     <!-- Breadcrumb -->
-    <div class="sm:flex hidden gap-2 items-center">
-        <mat-icon class="text-black hover:text-myAccent transition-all w-[22px] h-[22px] cursor-pointer"
-            svgIcon="heroicons_outline:home" (click)="navigateToHome()">
-        </mat-icon>
-        <p>Tax</p>
-        <span>/</span>
-        <p class="font-semibold text-myAccent">Add Tax</p>
+    <div class="flex items-center justify-between">
+
+        <div class="sm:flex hidden gap-2 items-center">
+            <mat-icon class="text-black hover:text-myAccent transition-all w-[22px] h-[22px] cursor-pointer"
+                svgIcon="heroicons_outline:home" (click)="dashboardAccess ? navigateToHome() : ''">
+            </mat-icon>
+            <p>Tax</p>
+            <span>/</span>
+            <p class="font-semibold text-myAccent">Add Tax</p>
+        </div>
+
+        <img *ngIf="isAccessToManageTax" class="w-[30px] cursor-pointer" matTooltip="Go Back"
+            src="assets/icons/back-arrow.svg" alt="Back" (click)="back()">
     </div>
 
     <!-- Title -->
