--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -1,9 +1,6 @@
-<div
-    class="flex flex-col sm:flex-row items-center md:items-start sm:justify-center md:justify-start flex-auto min-w-0"
->
+<div class="flex flex-col sm:flex-row items-center md:items-start sm:justify-center md:justify-start flex-auto min-w-0">
     <div
-        class="md:flex md:items-center md:justify-end w-full sm:w-auto md:h-full md:w-1/2 py-8 px-4 sm:p-12 md:p-16 sm:rounded-2xl md:rounded-none sm:shadow md:shadow-none sm:bg-card"
-    >
+        class="md:flex md:items-center md:justify-end w-full sm:w-auto md:h-full md:w-1/2 py-8 px-4 sm:p-12 md:p-16 sm:rounded-2xl md:rounded-none sm:shadow md:shadow-none sm:bg-card">
         <div class="w-full max-w-80 sm:w-80 mx-auto sm:mx-0">
             <!-- Logo -->
             <div class="w-12 -mb-4">
@@ -11,9 +8,7 @@
             </div>
 
             <!-- Title -->
-            <div
-                class="mt-8 -mb-4 text-4xl font-extrabold tracking-tight leading-tight"
-            >
+            <div class="mt-8 -mb-4 text-4xl font-extrabold tracking-tight leading-tight">
                 Sign in
             </div>
             <!-- <div class="flex items-baseline mt-0.5 font-medium">
@@ -26,14 +21,8 @@
             </div> -->
 
             <!-- Alert -->
-            <fuse-alert
-                class="mt-8 -mb-4"
-                *ngIf="showAlert"
-                [appearance]="'outline'"
-                [showIcon]="false"
-                [type]="alert.type"
-                [@shake]="alert.type === 'error'"
-            >
+            <fuse-alert class="mt-8 -mb-4" *ngIf="showAlert" [appearance]="'outline'" [showIcon]="false"
+                [type]="alert.type" [@shake]="alert.type === 'error'">
                 {{ alert.message }}
             </fuse-alert>
 
@@ -44,19 +33,11 @@
                     <label for="email">Email address</label>
                     <span class="text-red-500"> *</span>
                     <mat-form-field class="w-full">
-                        <input
-                            id="email"
-                            matInput
-                            [formControlName]="'email'"
-                        />
-                        <mat-error
-                            *ngIf="signInForm.get('email').hasError('required')"
-                        >
+                        <input id="email" matInput [formControlName]="'email'" class="date" />
+                        <mat-error *ngIf="signInForm.get('email').hasError('required')">
                             Email address is required
                         </mat-error>
-                        <mat-error
-                            *ngIf="signInForm.get('email').hasError('email')"
-                        >
+                        <mat-error *ngIf="signInForm.get('email').hasError('email')">
                             Please enter a valid email address
                         </mat-error>
                     </mat-form-field>
@@ -67,33 +48,17 @@
                     <label for="password">Password</label>
                     <span class="text-red-500"> *</span>
                     <mat-form-field class="w-full">
-                        <input
-                            id="password"
-                            matInput
-                            type="password"
-                            [formControlName]="'password'"
-                            #passwordField
-                        />
-                        <button
-                            mat-icon-button
-                            type="button"
-                            (click)="
+                        <input id="password" matInput type="password" [formControlName]="'password'" #passwordField
+                            class="date" />
+                        <button mat-icon-button type="button" (click)="
                                 passwordField.type === 'password'
                                     ? (passwordField.type = 'text')
                                     : (passwordField.type = 'password')
-                            "
-                            matSuffix
-                        >
-                            <mat-icon
-                                class="icon-size-5"
-                                *ngIf="passwordField.type === 'password'"
-                                [svgIcon]="'heroicons_solid:eye'"
-                            ></mat-icon>
-                            <mat-icon
-                                class="icon-size-5"
-                                *ngIf="passwordField.type === 'text'"
-                                [svgIcon]="'heroicons_solid:eye-off'"
-                            ></mat-icon>
+                            " matSuffix>
+                            <mat-icon class="icon-size-5" *ngIf="passwordField.type === 'password'"
+                                [svgIcon]="'heroicons_solid:eye'"></mat-icon>
+                            <mat-icon class="icon-size-5" *ngIf="passwordField.type === 'text'"
+                                [svgIcon]="'heroicons_solid:eye-off'"></mat-icon>
                         </button>
                         <mat-error> Password is required </mat-error>
                     </mat-form-field>
@@ -129,17 +94,10 @@
                 <!-- Submit button -->
                 <button
                     class="fuse-mat-button-large rounded-[5px] bg-myAccent hover:bg-accentHover transition-all text-white w-full mt-6"
-                    mat-flat-button
-                    [disabled]="signInForm.disabled"
-                    (click)="signIn()"
-                >
+                    mat-flat-button [disabled]="signInForm.disabled" (click)="signIn()">
                     <span *ngIf="!signInForm.disabled"> Sign in </span>
-                    <mat-progress-spinner
-                        *ngIf="signInForm.disabled"
-                        [diameter]="24"
-                        [mode]="'indeterminate'"
-                        class="text-white"
-                    ></mat-progress-spinner>
+                    <mat-progress-spinner *ngIf="signInForm.disabled" [diameter]="24" [mode]="'indeterminate'"
+                        class="text-white"></mat-progress-spinner>
                 </button>
 
                 <!-- Separator -->
@@ -174,59 +132,26 @@
         </div>
     </div>
     <div
-        class="relative hidden md:flex flex-auto items-center justify-center w-1/2 h-full p-16 lg:px-28 overflow-hidden bg-myAccent dark:border-l"
-    >
+        class="relative hidden md:flex flex-auto items-center justify-center w-1/2 h-full p-16 lg:px-28 overflow-hidden bg-myAccent dark:border-l">
         <!-- Background - @formatter:off -->
         <!-- Rings -->
-        <svg
-            class="absolute inset-0 pointer-events-none"
-            viewBox="0 0 960 540"
-            width="100%"
-            height="100%"
-            preserveAspectRatio="xMidYMax slice"
-            xmlns="http://www.w3.org/2000/svg"
-        >
-            <g
-                class="text-pink-400 opacity-25"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="100"
-            >
+        <svg class="absolute inset-0 pointer-events-none" viewBox="0 0 960 540" width="100%" height="100%"
+            preserveAspectRatio="xMidYMax slice" xmlns="http://www.w3.org/2000/svg">
+            <g class="text-pink-400 opacity-25" fill="none" stroke="currentColor" stroke-width="100">
                 <circle r="234" cx="196" cy="23"></circle>
                 <circle r="234" cx="790" cy="491"></circle>
             </g>
         </svg>
         <!-- Dots -->
-        <svg
-            class="absolute -top-16 -right-16 text-pink-400 opacity-55"
-            viewBox="0 0 220 192"
-            width="220"
-            height="192"
-            fill="none"
-        >
+        <svg class="absolute -top-16 -right-16 text-pink-400 opacity-55" viewBox="0 0 220 192" width="220" height="192"
+            fill="none">
             <defs>
-                <pattern
-                    id="837c3e70-6c3a-44e6-8854-cc48c737b659"
-                    x="0"
-                    y="0"
-                    width="20"
-                    height="20"
-                    patternUnits="userSpaceOnUse"
-                >
-                    <rect
-                        x="0"
-                        y="0"
-                        width="4"
-                        height="4"
-                        fill="currentColor"
-                    ></rect>
+                <pattern id="837c3e70-6c3a-44e6-8854-cc48c737b659" x="0" y="0" width="20" height="20"
+                    patternUnits="userSpaceOnUse">
+                    <rect x="0" y="0" width="4" height="4" fill="currentColor"></rect>
                 </pattern>
             </defs>
-            <rect
-                width="220"
-                height="192"
-                fill="url(#837c3e70-6c3a-44e6-8854-cc48c737b659)"
-            ></rect>
+            <rect width="220" height="192" fill="url(#837c3e70-6c3a-44e6-8854-cc48c737b659)"></rect>
         </svg>
         <!-- @formatter:on -->
         <!-- Content -->
@@ -266,3 +191,4 @@
         </div>
     </div>
 </div>
+<p-toast></p-toast>
