--- a/src/app/modules/admin/expense/components/receipt-dialog/receipt-dialog.component.html
+++ b/src/app/modules/admin/expense/components/receipt-dialog/receipt-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title class="mb-0">Receipt</h2>
+<h2 id="print" mat-dialog-title class="mb-0">Receipt</h2>
 <mat-dialog-content class="mat-typography py-3 overflow-y-scroll">
     <div *ngIf="data.imageUrl != null">
         <img [src]="imageUrl" alt="Receipt" />
@@ -6,12 +6,12 @@
     <span *ngIf="data.imageUrl == null">There is no Receipt</span>
 </mat-dialog-content>
 
-<mat-dialog-actions align="end" class="flex gap-4 items-center">
+<mat-dialog-actions id="print" align="end" class="flex gap-4 items-center">
     <button mat-dialog-close
         class="px-6 text-accentHover border border-accentHover  py-2 w-fit whitespace-nowrap rounded bg-backgroundColor justify-between transition-all flex items-center gap-2">
         Cancel
     </button>
-    <button
+    <button *ngIf="data.imageUrl != null"
         class="px-6 text-textColor py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover border border-darkAccent hover:border-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
         [mat-dialog-close]="false" cdkFocusInitial (click)="prinkReceipt()">
         Print
