--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -202,3 +202,16 @@ input.ng-invalid.ng-touched:not(.date) {
 body.light .mat-primary .mat-pseudo-checkbox-checked {
     background: #7fbfff;
 }
+
+@media print {
+
+    body {
+        padding: 0;
+        margin: 0;
+    }
+
+
+    #print {
+        display: none !important;
+    }
+}
